refactor(auth): utilize `apache.commons.lang3`